# OpFlow-JIT

./: CMakeLists.txt  README.md
.github/workflows/: Build.yml  Build.yml.disable
benchmark/: CMakeLists.txt
cmake/: CodeCoverage.cmake  FindAVX.cmake  IDE.cmake  OpFlowCPack.cmake  OpFlowConfig.cmake.in  Uninstall.cmake.in  UseBundledGTest.cmake.in  Utils.cmake  VTKConfig.cmake
doc/00_Overview/: overview.rst
examples/: CMakeLists.txt  FTCS.cpp
include/: Macros.hpp  Version.hpp
scripts/: codegen.py  update_copyright.sh
src/: CMakeLists.txt  DataType.hpp  Expression.cpp  Expression.hpp  Field.hpp  IR.cpp  IR.hpp  Index.cpp  Index.hpp  Kernel.cpp  Kernel.hpp  Macros.hpp  OpFlow.cpp  OpFlow.hpp  Program.cpp  Program.hpp  Scalar.cpp  Scalar.hpp  Variable.hpp  Version.hpp
src/eqnsolve/api/: Solve.cpp  Solve.hpp
src/lang/: OpLang.hpp
src/lang/dialect/: CMakeLists.txt  OpDialect.td  OpLang.cxx  OpLang.td  OpLangDialect.hpp  OpLangDialect.td  OpLangOps.hpp  OpLangOps.td  OpLangTypes.td
src/lang/frontend/: DataType.hpp  Equation.cpp  Equation.hpp  Expression.cpp  Expression.hpp  Field.cpp  Field.hpp  Index.cpp  Index.hpp  Kernel.cpp  Kernel.hpp  Scalar.cpp  Scalar.hpp  Solve.cpp  Solve.hpp  Variable.cpp  Variable.hpp
src/lang/frontend/bc/: Boundary.cpp  Boundary.hpp
src/lang/frontend/mesh/: BoundaryDescriptor.cpp  BoundaryDescriptor.hpp  CartesianMesh.cpp  CartesianMesh.hpp  Mesh.cpp  Mesh.hpp  MeshLocDescriptor.cpp  MeshLocDescriptor.hpp  MeshProxy.cpp  MeshProxy.hpp  MultiPatchedMesh.cpp  MultiPatchedMesh.hpp  StructuredMesh.cpp  StructuredMesh.hpp  UnstructuredMesh.cpp  UnstructuredMesh.hpp
src/lang/ir/: Block.cpp  Block.hpp  IR.cpp  IR.hpp  IRNode.cpp  IRNode.hpp  Stmt.cpp  Stmt.hpp
src/lang/pass/: IRPrinter.cpp  IRPrinter.hpp  IRVisitor.cpp  IRVisitor.hpp
src/lang/program/: Environment.cpp  Environment.hpp  IRBuilder.cpp  IRBuilder.hpp  Program.cpp  Program.hpp  RuntimeContext.cpp  RuntimeContext.hpp
src/lang/semantic/: Boundary.cpp  Boundary.hpp  DataType.hpp  Equation.cpp  Equation.hpp  Expression.cpp  Expression.hpp  Field.cpp  Field.hpp  Index.hpp  Kernel.cpp  Kernel.hpp  Scalar.cpp  Scalar.hpp  Solve.cpp  Solve.hpp  Variable.cpp  Variable.hpp
src/lang/semantic/bc/: Boundary.hpp
src/lang/semantic/mesh/: BoundaryDescriptor.cpp  BoundaryDescriptor.hpp  CartesianMesh.cpp  CartesianMesh.hpp  Mesh.cpp  Mesh.hpp  MeshLocDescriptor.cpp  MeshLocDescriptor.hpp  MeshProxy.cpp  MeshProxy.hpp  Meshes.cpp  MultiPatchedMesh.hpp  StructuredMesh.cpp  StructuredMesh.hpp
src/mesh/: Meshes.hpp
src/ops/FDM/: fdms.cpp  fdms.hpp
src/utils/: Macros.hpp  Prototypes.hpp
test/: CMakeLists.txt  test_main.cpp  test_main_mpi.cpp
test/lang/: CMakeLists.txt  Scalar.cpp
